# sql-query-to-file

./: .envrc  LICENSE  README.md  noxfile.py  pyproject.toml
src/sql_query_to_file/: cli.py
tests/: test_cli.py
