[tool.poetry]
name = "sql-query-to-file"
version = "0.1.0"
description = ""
authors = ["Scott Burns <scott@lentigo.net>"]
readme = "README.md"
packages = [{include = "sql_query_to_file", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.tests.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
