[tool.poetry]
name = "sql-query-to-file"
version = "0.1.0"
description = ""
authors = ["Scott Burns <scott@lentigo.net>"]
readme = "README.md"
packages = [{include = "sql_query_to_file", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"

[tool.poetry.scripts]
sql-query-to-file = "sql_query_to_file.cli:cli"

[tool.poetry.group.tests.dependencies]
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.19.0"

[tool.coverage.paths]
source = [ "src", "*/site-packages" ]

[tool.coverage.run]
branch = true
source = ["sql_query_to_file"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
